contrast fix

--- a/css/mstyle.css
+++ b/css/mstyle.css
@@ -39,7 +39,7 @@ body {
     color: #270586;
 }
 .lead {
-    color: #894ad1;
+    color: #ffffff;
 }
 .py-5 {
     padding-bottom: 0rem!important;
